install ffmpeg in macos through brew

--- a/.github/workflows/ci_on_macos.yml
+++ b/.github/workflows/ci_on_macos.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ matrix.pytorch-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/Makefile') }}
+      - name: Install FFmpeg via Homebrew
+        run: brew install ffmpeg
+      - name: Run ffmpeg command
+        run: ffmpeg -version
       - uses: actions/setup-python@v6
         with:
           python-version: ${{ matrix.python-version }}
