--- a/.github/workflows/publish_docker_image.yml
+++ b/.github/workflows/publish_docker_image.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 0 * * 1"
 
 jobs:
-  docker:
+  docker-cpu:
     runs-on: ubuntu-latest
     environment: docker
     # Only runs if the current branch is 'master'
@@ -35,6 +35,27 @@ jobs:
             --target devel \
             -t espnet/espnet:cpu-latest .
           docker push espnet/espnet:cpu-latest
+
+  docker-gpu:
+    runs-on: ubuntu-latest
+    environment: docker
+    # Only runs if the current branch is 'master'
+    # Only runs if the current repository is espnet/espnet
+    if: github.repository == 'espnet/espnet' && github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@master
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push GPU container
         run: |
