--- a/.github/workflows/ci_on_ubuntu.yml
+++ b/.github/workflows/ci_on_ubuntu.yml
@@ -28,127 +28,149 @@ jobs:
             echo "is_docker=false" >> "$GITHUB_OUTPUT"
           fi
 
-  unit_test_espnet2_and_integration_test_espnet2:
-    runs-on: ${{ matrix.os }}
+  test_espnet2:
+    runs-on: ubuntu-latest
     needs: process_labels
     if: |
       github.event.pull_request.draft == false
     strategy:
       max-parallel: 20
       matrix:
-        os: [ubuntu-latest]
         python-version: ["3.10", "3.12"]
         pytorch-version: [2.5.1, 2.7.1, 2.8.0, 2.9.1]
         chainer-version: [6.0.0]
         use-conda: [false]
+        # By default, all combinations run python tests only
+        run-shell: [false]
+        run-python: [true]
+        run-utils: [false]
+        run-integration: [false]
+        exclude:
+          # Exclude 3.12 with older/newer PyTorch versions for integration tests
+          - python-version: "3.12"
+            pytorch-version: 2.8.0
+          - python-version: "3.12"
+            pytorch-version: 2.9.1
+        include:
+          # Core combination - runs all tests
+          - python-version: "3.10"
+            pytorch-version: 2.7.1
+            chainer-version: 6.0.0
+            use-conda: false
+            run-shell: true
+            run-python: true
+            run-utils: true
+            run-integration: true
+          # Add integration tests for 3.12 with selected PyTorch versions
+          - python-version: "3.12"
+            pytorch-version: 2.5.1
+            chainer-version: 6.0.0
+            use-conda: false
+            run-shell: false
+            run-python: true
+            run-utils: false
+            run-integration: true
+          - python-version: "3.12"
+            pytorch-version: 2.7.1
+            chainer-version: 6.0.0
+            use-conda: false
+            run-shell: false
+            run-python: true
+            run-utils: false
+            run-integration: true
     steps:
       - uses: actions/checkout@master
       - uses: actions/cache@v5
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ matrix.pytorch-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/Makefile') }}
-      - uses: actions/setup-python@v6
+      - name: Make environment
+        uses: ./.github/actions/prepare-environment
         with:
+          os-version: ubuntu
           python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
-      - name: install dependencies
-        run: |
-          sudo apt-get update -qq
-          # NOTE(kamo): g++-7 doesn't exist in ubuntu-latest
-          sudo apt-get install -qq -y cmake libsndfile1-dev bc sox ffmpeg libjpeg-dev
-      - name: Get PR labels
-        id: pr-labels
-        uses: joerick/pr-labels-action@v1.0.9
-      - name: install espnet
-        env:
-          ESPNET_PYTHON_VERSION: ${{ matrix.python-version }}
-          TH_VERSION: ${{ matrix.pytorch-version }}
-          CHAINER_VERSION: ${{ matrix.chainer-version }}
-          USE_CONDA: ${{ matrix.use-conda }}
-        run: |
-          ./ci/install.sh
-
+          pytorch-version: ${{ matrix.pytorch-version }}
+          chainer-version: ${{ matrix.chainer-version }}
+          use-conda: ${{ matrix.use-conda }}
+      
       - name: test shell
+        if: matrix.run-shell == true
         run: |
           ./ci/test_shell_espnet2.sh
 
       - name: test python
+        if: matrix.run-python == true
         run: ./ci/test_python_espnet2.sh
       - uses: codecov/codecov-action@v5
+        if: matrix.run-python == true
         with:
           flags: test_python_espnet2
       - name: coverage erase
+        if: matrix.run-python == true
         continue-on-error: true
         run: |
           source tools/activate_python.sh
           coverage erase
 
       - name: install kaldi
+        if: matrix.run-utils == true || matrix.run-integration == true
         run: |
           ./ci/install_kaldi.sh
 
       - name: test utils
+        if: matrix.run-utils == true
         run: ./ci/test_utils.sh
       - uses: codecov/codecov-action@v5
+        if: matrix.run-utils == true
         with:
           flags: test_utils
       - name: coverage erase
+        if: matrix.run-utils == true
         continue-on-error: true
         run: |
           source tools/activate_python.sh
           coverage erase
 
       - name: test espnet2 integration
+        if: matrix.run-integration == true
         run: ./ci/test_integration_espnet2.sh
       - uses: codecov/codecov-action@v5
+        if: matrix.run-integration == true
         with:
           flags: test_integration_espnet2
 
-  unit_test_espnet3_and_integration_test_espnet3:
-    runs-on: ${{ matrix.os }}
+  test_python_espnet3:
+    runs-on: ubuntu-latest
     needs: process_labels
     if: |
       github.event.pull_request.draft == false
     strategy:
       max-parallel: 20
       matrix:
-        os: [ubuntu-latest]
         python-version: ["3.10", "3.12"]
         pytorch-version: [2.5.1, 2.7.1, 2.8.0, 2.9.1]
         chainer-version: [6.0.0]
         use-conda: [false]
+        exclude:
+          # Exclude 3.12 with older/newer PyTorch versions
+          - python-version: "3.12"
+            pytorch-version: 2.8.0
+          - python-version: "3.12"
+            pytorch-version: 2.9.1
     steps:
       - uses: actions/checkout@master
       - uses: actions/cache@v5
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ matrix.pytorch-version }}-${{ hashFiles('**/setup.py') }}-${{ hashFiles('**/Makefile') }}
-      - uses: actions/setup-python@v6
+          key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ matrix.pytorch-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/Makefile') }}
+      - name: Make environment
+        uses: ./.github/actions/prepare-environment
         with:
+          os-version: ubuntu
           python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
-      - name: install dependencies
-        run: |
-          sudo apt-get update -qq
-          # NOTE(kamo): g++-7 doesn't exist in ubuntu-latest
-          sudo apt-get install -qq -y cmake libsndfile1-dev bc sox ffmpeg libjpeg-dev
-      - name: Get PR labels
-        id: pr-labels
-        uses: joerick/pr-labels-action@v1.0.9
-      - name: install espnet
-        env:
-          ESPNET_PYTHON_VERSION: ${{ matrix.python-version }}
-          TH_VERSION: ${{ matrix.pytorch-version }}
-          CHAINER_VERSION: ${{ matrix.chainer-version }}
-          USE_CONDA: ${{ matrix.use-conda }}
-        run: |
-          ./ci/install.sh
-
-      # Note (Masao): ESPnet-3 does not use shell.
-      # - name: test shell
-      #   run: |
-      #     ./ci/test_shell_espnet2.sh
-
+          pytorch-version: ${{ matrix.pytorch-version }}
+          chainer-version: ${{ matrix.chainer-version }}
+          use-conda: ${{ matrix.use-conda }}
       - name: test python
         run: ./ci/test_python_espnet3.sh
       - uses: codecov/codecov-action@v5
@@ -160,21 +182,14 @@ jobs:
           source tools/activate_python.sh
           coverage erase
 
-      # - name: test espnet3 integration
-      #   run: ./ci/test_integration_espnet3.sh
-      # - uses: codecov/codecov-action@v2
-      #   with:
-      #     flags: test_integration_espnet3
-
   test_configuration_espnet2:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: process_labels
     if: |
       github.event.pull_request.draft == false
     strategy:
       max-parallel: 20
       matrix:
-        os: [ubuntu-latest]
         python-version: ["3.10"]
         pytorch-version: ["2.6.0"]
         chainer-version: ["6.0.0"]
@@ -185,23 +200,14 @@ jobs:
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ matrix.pytorch-version }}-${{ hashFiles('**/pyproject.toml') }}-${{ hashFiles('**/Makefile') }}
-      - uses: actions/setup-python@v6
+      - name: Make environment
+        uses: ./.github/actions/prepare-environment
         with:
+          os-version: ubuntu
           python-version: ${{ matrix.python-version }}
-          architecture: 'x64'
-      - name: install dependencies
-        run: |
-          sudo apt-get update -qq
-          # NOTE(kamo): g++-7 doesn't exist in ubuntu-latest
-          sudo apt-get install -qq -y cmake libsndfile1-dev bc sox ffmpeg
-      - name: install espnet
-        env:
-          ESPNET_PYTHON_VERSION: ${{ matrix.python-version }}
-          TH_VERSION: ${{ matrix.pytorch-version }}
-          CHAINER_VERSION: ${{ matrix.chainer-version }}
-          USE_CONDA: ${{ matrix.use-conda }}
-        run: |
-          ./ci/install.sh
+          pytorch-version: ${{ matrix.pytorch-version }}
+          chainer-version: ${{ matrix.chainer-version }}
+          use-conda: ${{ matrix.use-conda }}
       - name: Clean environment
         run: |
           sudo rm -rf /usr/share/dotnet
@@ -215,14 +221,13 @@ jobs:
           flags: test_configuration_espnet2
 
   test_import:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     needs: process_labels
     if: |
       github.event.pull_request.draft == false
     strategy:
       max-parallel: 20
       matrix:
-        os: [ubuntu-latest]
         python-version: ["3.10"]
         pytorch-version: [2.7.1]
     steps:
