--- a/.github/actions/prepare-environment/action.yml
+++ b/.github/actions/prepare-environment/action.yml
@@ -27,13 +27,7 @@ runs:
       with:
         python-version: ${{ inputs.python-version }}
         architecture: 'x64'
-    - name: install dependencies ubuntu
-      if: ${{ inputs.os-version == 'ubuntu' }}
-      shell: bash
-      run: |
-        sudo apt-get update -qq
-        # NOTE(kamo): g++-7 doesn't exist in ubuntu-latest
-        sudo apt-get install -qq -y cmake libsndfile1-dev bc sox ffmpeg libjpeg-dev
+    # NOTE: System dependencies removed - they're not cached and will be installed in test jobs
     - name: install espnet
       shell: bash
       env:
