Refactor CI workflow to enhance system dependencies caching and improve installation speed

--- a/.github/actions/install-system-dependencies/action.yml
+++ b/.github/actions/install-system-dependencies/action.yml
@@ -27,13 +27,14 @@ runs:
         path: |
           /var/cache/apt/archives
           /var/lib/apt/lists
-        key: ${{ runner.os }}-apt-${{ steps.get-date.outputs.date }}-${{ hashFiles('.github/actions/install-system-dependencies/action.yml') }}
+        key: ${{ runner.os }}-apt-${{ steps.get-date.outputs.date }}
         restore-keys: |
-          ${{ runner.os }}-apt-${{ steps.get-date.outputs.date }}-
           ${{ runner.os }}-apt-
 
     - name: Install system packages
       shell: bash
       run: |
         sudo apt-get update -qq
+        # Use parallel downloads for faster installation on cache miss
+        echo 'Acquire::Retries "3";' | sudo tee /etc/apt/apt.conf.d/80-retries > /dev/null
         sudo apt-get install -qq -y ${{ inputs.packages }}
