Refactor CI scripts to enhance logging for Python dependency installation and testing steps

--- a/.github/workflows/ci_on_ubuntu.yml
+++ b/.github/workflows/ci_on_ubuntu.yml
@@ -269,11 +269,13 @@ jobs:
       env:
         TH_VERSION: ${{ matrix.pytorch-version }}
       run: |
+        echo "::group::Python dependencies installation log"
         python3 -m pip install -U "Cython<3.1.0"
         python3 -m pip install -U numba six
         python3 -m pip install build
         ./tools/installers/install_torch.sh false ${TH_VERSION} CPU
         python3 -m build --wheel
+        echo "::endgroup::"
         python3 -m pip install "$(echo dist/espnet-*.whl)"[all]
         # log
         python3 -m pip freeze
