--- a/.github/workflows/ci_on_ubuntu.yml
+++ b/.github/workflows/ci_on_ubuntu.yml
@@ -28,9 +28,19 @@ jobs:
             echo "is_docker=false" >> "$GITHUB_OUTPUT"
           fi
 
-  setup_environment:
+  warm_system_cache:
     runs-on: ubuntu-latest
     needs: process_labels
+    if: |
+      github.event.pull_request.draft == false
+    steps:
+      - uses: actions/checkout@master
+      - name: Warm up system dependencies cache
+        uses: ./.github/actions/install-system-dependencies
+
+  setup_environment:
+    runs-on: ubuntu-latest
+    needs: [process_labels, warm_system_cache]
     if: |
       github.event.pull_request.draft == false
     strategy:
@@ -61,9 +71,6 @@ jobs:
       - name: Install Kaldi
         if: steps.cache-venv.outputs.cache-hit != 'true'
         run: ./ci/install_kaldi.sh
-      - name: Warm up system dependencies cache
-        if: steps.cache-venv.outputs.cache-hit != 'true'
-        uses: ./.github/actions/install-system-dependencies
 
   test_python_espnet2:
     runs-on: ubuntu-latest
